--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-GRAMS
-django>=2.1.4
-psycopg2>=2.7.7
-datetime>=4.3
-django-crispy-forms>=1.7.2
+certifi==2018.11.29
+chardet==3.0.4
+DateTime==4.3
+Django==2.1.4
+django-crispy-forms==1.7.2
+gunicorn==19.9.0
+idna==2.8
+psycopg2==2.7.7
+pytz==2018.7
+requests==2.21.0
+urllib3==1.24.1
+yolk==0.4.3
+zope.interface==4.6.0
